2016-05-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_filter.m: Crashed when itan got empty,
	when setting isub. 

	* Mscripts_precalc/q2_precalc_abslookup.m:
	* Mscripts_precalc/q2_precalc_fgrid.m: Had not been updated to
	call q2_arts.

2016-05-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m: Abs lookups now expected to be at /QsmrAbsLookups

	* docker-compose.yml: Defined two options, intercative and inv_demo.

2016-05-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_fields.rst:
	* Settings/q_std.m:
	* Mscripts_arts/q2_inv.m (subfun4se): Removed Q.NOISE_SCALEFAC.

	* Mscripts_arts/q2_arts.m: Corrected header after change below.

2016-04-22  Joakim Möller <joakim.moller@molflow.com>
    * arts4smr -> arts

2016-04-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_fields.rst (Qsmr): A small correction.

2016-03-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Some reorganisation of how data files are organised. 

2016-03-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Now not dependent on Atmlab.

2016-03-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_qsystem/q2_pgrid.m: Changed how grid spacing is selected
	and things did not really work in the thermosphere.

2016-03-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_precalc/q2_precalc_fgrid.m (f_opt): Hard-coding
	of MSIS90 used old field name.

	* Mscripts_precalc/q2_precalc_abslookup.m (do_1fmode): Added
	hard-coding of MSIS90 and Bdx.

2016-03-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4l2): Changed field names
	following suggestion på Andreas.

	* Mscripts_database/q2_get_atm.m: WebApi now works.

2016-03-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Gave up on replacement lines and changed how spectrosocopic data
	are incorporated.

	* Polishing of setting for fmode 1, and a start on 21.
