@@ -53,7 +53,7 @@ function [itan,isub] = l1b_filter(L1B,varargin)
 %
 [ztan_low,ztan_high,tint_maxdev,lag0_max,...
  q_tspill,q_trec,q_noise,q_scan,q_nspec,q_tb,q_tint,q_ref1,q_ref2,q_moon] = ...
-    optargs( varargin, { -Inf, Inf, 0.02, 0.5, ...
+    optargs( varargin, { -Inf, Inf, 0.02, 2, ...
                     1, 1, 1, 0, 0, 0, 0, 0, 0, 1 } ); 
 
 
